<resources>
    <string name="facebook_app_id">500373520130644</string>
    <string name="fb_login_protocol_scheme">fb500373520130644</string>
    <string name="app_name">Wetzel\'s Pretzels</string>
    <string name="day_prompt">Select a Day</string>
    <string name="contact_us_faq">Contact us at wetzels@rlvt.net</string>
    <string-array name="day_arrays">
        <item>DAY</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="month_prompt">Select a Month</string>
    <string-array name="month_arrays">
        <item>MONTH</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="imagecontent">a</string>
    <string name="snapreceipt">SNAP RECEIPT</string>
    <string name="viewrewards">VIEW REWARDS</string>
    <string name="referafriend">REFER A FRIEND</string>
    <string name="socialize">SOCIALIZE</string>
    <string name="referafriendpagetitle">REFER A FRIEND\nEARN POINTS</string>
    <string name="referfriendfirsttext">INTRODUCE YOUR FRIENDS</string>
    <string name="referfriendsecondtext">TO WETZEL\'S. MESSAGE, TEXT, EMAIL, OR TWEET THEM YOUR REFERRAL CODE.</string>
    <string name="snap_tutorial_white_text">Select your WETZEL\'S\nShow your Badge\nEarn Rewards</string>
    <string name="snap_tutorial_orange_text">Tap to view your rewards badge</string>
    <string name="snap_tutorial_page_title">Earn Points,\nGet Rewards</string>
    <string name="snap_tutorial_page_desc">Show your badge to the cashier to earn points for each purchase!</string>
    <string name="howtogetrewards">HOW TO GET REWARDS</string>
    <string name="eat_tutorial_desc">Dine In or Take Away, eat or drink any of our delicious items.</string>
    <string name="snap_tutorial_desc">Scan/Pay with your phone at the register or snap a photo of the barcode on your receipt to earn dough in the app.</string>
    <string name="rewards_tutorial_desc">The more dough you earn,  the closer you get to scrumptious rewards.  </string>
    <string name="earnpoints">EARN POINTS</string>
    <string name="selectlocationtosubmitreceipt">SELECT LOCATION TO SUBMIT RECEIPT</string>
    <string name="badgePageTitle">Display to Cashier to\nEarn Points</string>
    <string name="htgr_eat_desc">Enjoy delicious subs, salads, sides\nand combos.</string>
    <string name="htgr_snap_desc">Share your phone # with the cashier\nevery time you make a purchase</string>
    <string name="htgr_claim_desc">Redeem your points for awesome\nrewards like free food</string>
    <string name="tapbuttontosendlovetext">Tap button to send the <i>Love</i></string>
    <string name="aboutroti">ABOUT ROTI</string>
    <string name="locations">LOCATIONS</string>
    <string name="Back">Back</string>
    <string name="rewaredsmore">Redeem the Love</string>
    <string name="rewards_page_redeem_text">Redeem the <i>LOVE</i>\n(in-store only)</string>
    <string name="rewardspoints">My Points</string>
    <string name="viewactivity">View activity</string>
    <string name="faqinfo">FAQ</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="contactus">CONTACT US</string>
    <string name="signupemail">Sign up with email</string>
    <string name="email">Email Address</string>
    <string name="firstname">First Name*</string>
    <string name="lastname">Last Name*</string>
    <string name="password">Password</string>
    <string name="forgotpassword">FORGOT PASSWORD?</string>
    <string name="privacy">Privacy policy</string>
    <string name="terms">Terms of Use</string>
    <string name="cardNumberHint">CREDIT CARD NUMBER</string>
    <string name="cardTypeHint">CARD TYPE</string>
    <string name="cvvHint">CVV</string>
    <string name="monthYearHint">MM/YYYY</string>
    <string name="billingAddressHint">BILLING ADDRESS</string>
    <string name="zipCodeHint">Zipcode</string>
    <string name="sep"> | </string>
    <string name="loginplease">PLEASE LOG IN</string>
    <string name="promogot">Got a promo code from us? \n Please enter your code here.</string>
    <string name="promoenter">Please enter your code here.</string>
    <string name="promoCase">Case sensitive, no spaces please.</string>
    <string name="promoContact">Code not working? </string>
    <string name="promocode_edit_contactus_link">Contact us.</string>
    <string name="promocode">Promo Code</string>
    <string name="promocodeinfo">PROMO CODE</string>
    <string name="myaccount">MY ACCOUNT</string>
    <string name="oldpassword">Old password</string>
    <string name="newpassword">New password</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="termsofuse">Terms of Use </string>
    <string name="termsofusecontent">Terms of Use Page </string>
    <string name="FOODTHATLOVESYOUbACK">FOOD THAT LOVES YOU BACK</string>
    <string name="AboutUsQ">Is there any human emotion more powerful than love?</string>
    <string name="AboutText" formatted="false">As a young chef in Brussels, Alain Coumont could not find the right bread to serve in his restaurant. Passionate about quality, he returned to his roots and decided to make it himself. He opened a small bakery where he could knead organic flour, salt and water into what have become his signature rustic loaves. That was in 1990, and those loaves are now the focal point of Wetzel\'s simple, wholesome cuisine in more than 200 locations on five continents.</string>
    <string name="WELCOMETOROTI">WELCOME TO ROTI</string>
    <string name="HAVEAREFERRAL">HAVE A REFERRAL?</string>
    <string name="tapfbbutton">Tap the button to continue without a referral code</string>
    <string name="Refercodeoptional">REFERRAL CODE (OPTIONAL)</string>
    <string name="SIGNUPWITHEMAIL">SIGN UP</string>
    <string name="PLEASELOGIN">PLEASE LOG IN</string>
    <string name="LOGOUT">LOG OUT</string>
    <string name="LOGIN">LOG IN</string>
    <string name="login_page_title">LOG IN</string>
    <string name="ChangePassword">Reset Password</string>
    <string name="TransferYakiCard">"Transfer Yakiniku card"</string>
    <string name="yaki_card_number">Yakiniku card number</string>
    <string name="repeat_card_number">Repeat card number</string>
    <string name="signuptermstext">By tapping on "Sign up with Facebook", "Sign up with email", or "Sign in" above you are indicating that you have read and agree to the <![CDATA[<a href="http://terms">Terms of Use</a>]]> and <![CDATA[<a href="http://privacy">Privacy Policy</a>]]>.</string>
    <string name="textAboveFBSignup">SIGN UP WITH FACEBOOK EARN</string>
    <string name="signuptermstextterms">Terms of Use</string>
    <string name="signuptermstextand"> and </string>
    <string name="signuptermstextpolicy">Privacy Policy.</string>
    <string name="promocode_page_title">Promo Code</string>
    <string name="locationinfo">LOCATIONS</string>
    <string name="receipt_rejected">Your Receipt was rejected. Please contact support for more details.</string>
    <string name="receipt_receive">Your receipt has been received. We will begin processing the image soon.</string>
    <string name="receipt_process">Your receipt is processed and pending decision.</string>
    <string name="info_how_to_receive_love">How to get rewards</string>
    <string name="text_snap">Take a picture of your receipt \nand submit it to earn \nWETZEL\'S Love and more</string>
    <string name="chooseuptothree">CHOOSE UPTO THREE</string>
    <string name="daysleft">DAYS LEFT</string>
    <string name="doacharity">DO A CHARITY RUN/WALK</string>
    <string name="eatatzoes">EAT AT ROTI</string>
    <string name="returningusers">Returning Email Users</string>
    <string name="enteremal">ENTER YOUR EMAIL</string>
    <string name="tweet">Tweet</string>
    <string name="postfb">Post to Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="freebr">Free</string>
    <string name="mygoodiesredeam">Tap the buttons below to redeem or remove</string>
    <string name="takehome">TAKE HOME TUB (100 points)</string>
    <string name="choiceofentree">CHOICE OF ENTEREE</string>
    <string name="num5">5</string>
    <string name="x">X</string>
    <string name="HISTORY1">\"Life\" as we know it</string>
    <string name="HISTORY3">Welcome to WETZEL\'S.</string>
    <string name="showcshier">Please present this to your cashier at time\nof purchase. Not redeemable for cash. Non-\ntransferable. Valid only at participating locations.\nNot valid with other discounts or offers.</string>
    <string name="redeemtext">Please tap “Redeem Reward” after you have asked your server\n for your check. This offer cannot be combined with other offers.</string>
    <string name="showcshierredeemed">Your reward has been redeemed. You can no longer use this reward.</string>
    <string name="reedeemable">(REEDEEMABLE IN-STORE)</string>
    <string name="storeaddress">a </string>
    <string name="timeremaining">TIME REMAINING</string>
    <string name="time">1</string>
    <string name="code">CODE: </string>
    <string name="codeval">2</string>
    <string name="reedeemd">REEDEEMD</string>
    <string name="sucess">SUCCESS!</string>
    <string name="thank">THANK YOU!</string>
    <string name="receivedreceiptthank">Thank you for Scanning Your Receipt</string>
    <string name="receivedreceipt">Thank you for your feedback!</string>
    <string name="dinein">Dine in</string>
    <string name="takeout">Take out</string>
    <string name="phottotip">RECEIPT PHOTO TIPS</string>
    <string name="phottotip1">• Place receipt on a flat surface</string>
    <string name="phottotip2">• Use adequate lighting</string>
    <string name="phottotip3">• Make sure text is not blurry</string>
    <string name="add_to_balance">ADD TO BALANCE</string>
    <string name="current_balance">CURRENT BALANCE</string>
    <string name="you_can_add_to_balance">YOU CAN ADD TO YOUR BALANCE USING ONE OF THE PAYMENT FORMS BELOW.</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="edit_gift_card">EGIFTCARD CODE</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="confirm">CONFIRM</string>
    <string name="EMAIL">EMAIL</string>
    <string name="VERIFICATION">VERIFICATION</string>
    <string name="a_verification_email_has_been_sent">A VERIFICATION E-MAIL WAS SENT TO</string>
    <string name="please_verify_your_account_to_continue">PLEASE VERIFY YOUR ACCOUNT TO CONTINUE USING WETZELS APP.</string>
    <string name="sign_in_with_another_account">SIGN IN WITH ANOTHER ACCOUNT</string>
    <string name="sign_up_with_another_account">SIGN UP WITH ANOTHER ACCOUNT</string>
    <string name="if_you_havent_recieved">*if you havent recieved a verification e-mail, please</string>
    <string name="OR">OR</string>
    <string name="please_check_your_spam_folder">check your spam folder or</string>
    <string name="resend_verification">Resened Verification mail</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
</resources>