<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_img_height"
        android:background="@drawable/header_img"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:rotation="-6"
            android:text="@string/VERIFICATION"
            android:textColor="@color/white"
            android:textSize="@dimen/header_font_size"></TextView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_header"
        android:layout_marginTop="@dimen/margin_top_thirty"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_twenty"
        android:paddingLeft="@dimen/padding_twenty"
        android:paddingRight="@dimen/padding_twenty">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/header_img"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:scrollbars="none">


            <LinearLayout
                android:id="@+id/loginoption_linear_parent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_five"
                android:paddingRight="@dimen/padding_five">

                <TextView
                    android:id="@+id/first_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"

                    android:singleLine="true"
                    android:text="@string/a_verification_email_has_been_sent" />

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:gravity="center"
                    android:text="@string/EMAIL"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/text_verify"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/please_verify_your_account_to_continue" />


                <TextView
                    android:id="@+id/notification_for_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/padding_twenty_five"
                    android:gravity="center"
                    android:text="@string/if_you_havent_recieved"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/please_check_your_spam"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:lines="1"
                        android:text="@string/please_check_your_spam_folder"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/resend_verification"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:lines="1"
                        android:paddingLeft="@dimen/padding_two"
                        android:text="@string/resend_verification"
                        android:textSize="12sp" />


                </LinearLayout>


                <TextView
                    android:id="@+id/or_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/margin_seven"
                    android:layout_marginRight="@dimen/margin_seven"
                    android:layout_marginTop="@dimen/padding_twenty_five"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/OR"
                    android:textSize="12sp" />


                <Button
                    android:id="@+id/sign_in_with_another_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fifteen"
                    android:background="@drawable/btn_orange_selector"
                    android:text="@string/sign_in_with_another_account" />


                <Button
                    android:id="@+id/sign_up_with_another_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_orange_selector"
                    android:text="@string/sign_up_with_another_account" />

                <Button
                    android:id="@+id/sign_up_with_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fifteen"
                    android:background="@drawable/btn_blue_selector"
                    android:text="@string/sign_up_with_facebook" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fifteen"
                    android:visibility="gone">


                    <TextView
                        android:id="@+id/loginoption_text_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_five"
                        android:paddingBottom="@dimen/padding_ten"
                        android:paddingTop="@dimen/padding_ten"
                        android:text="@string/terms"
                        android:textColor="#666"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:padding="3dp"
                        android:text="@string/sep"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/loginoption_text_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:paddingBottom="@dimen/padding_ten"
                        android:paddingTop="@dimen/padding_ten"
                        android:text="@string/privacy"
                        android:textColor="#666"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</RelativeLayout>