<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_img_height"
        android:background="@drawable/header_img"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top_ten"
            android:rotation="-6"
            android:text="@string/add_to_balance"
            android:textColor="@color/white"
            android:textSize="@dimen/header_font_size"></TextView>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linear_header"
        android:fillViewport="true"
        android:gravity="center_horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/addcurency_linear_parent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/linear_layout_padding"
            android:paddingRight="@dimen/linear_layout_padding">

            <LinearLayout
                android:id="@+id/current_balance_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_twenty"
                android:background="@drawable/btn_blue_selector"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_five">

                <TextView
                    android:id="@+id/current_balance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_balance" />

                <TextView
                    android:id="@+id/current_balance_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0.00" />

            </LinearLayout>

            <TextView
                android:id="@+id/add_currency_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_twenty"
                android:gravity="center"
                android:text="@string/you_can_add_to_balance" />

            <Button
                android:id="@+id/btn_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_ten"
                android:background="@drawable/btn_orange_selector"
                android:padding="@dimen/padding_fifteen"
                android:text="@string/credit_card" />

            <Button
                android:id="@+id/btn_gift_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_orange_selector"
                android:padding="@dimen/padding_fifteen"
                android:text="@string/edit_gift_card" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>