<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background" >

    <ImageView
        android:id="@+id/header_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_img_height"        
        android:background="@drawable/header_img_add_photo" />

    <LinearLayout
        android:id="@+id/loginoption_linear_parent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header_img"
        android:gravity="center_horizontal"
       	android:padding="@dimen/margin_top_twenty"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"        	
        	android:gravity="center"        	
        	android:orientation="vertical">
	        <com.widgets.RoundedImageView
	            android:id="@+id/addphoto_avatar"
	            android:layout_width="200dp"
	        	android:layout_height="200dp"
	        	android:src="@drawable/default_avatar"
	        	android:scaleType="fitXY"
	        	android:contentDescription="@string/imagecontent"
	            />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
	        <Button 
	            android:id="@+id/addphoto_btn_select"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	         	android:padding="@dimen/padding_fifteen"
	            android:layout_marginTop="@dimen/margin_top_twenty"
	            android:text="@string/select_photo"
	            android:background="@drawable/btn_orange_selector" />            
	
	        <Button 
	            android:id="@+id/addphoto_btn_confirm"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	         	android:padding="@dimen/padding_fifteen"
	            android:layout_marginTop="@dimen/margin_top_ten"
	            android:text="@string/confirm"
	            android:background="@drawable/btn_orange_selector" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>