<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@drawable/beige_bg_sm">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phototip_relative_headertip"
        android:layout_width="fill_parent"
        android:layout_below="@+id/phototip_relative_header"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dip"
        android:background="@drawable/topbar_blank" >

        <TextView
            android:id="@+id/phototip_text_phottotip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dip"
            android:gravity="center"
            android:text="@string/phottotip"
            android:textColor="#fff"
            android:textSize="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/phototip_relative_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dip"
        android:background="@drawable/gkk_top_bar" >

        <TextView
            android:id="@+id/phototip_text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/back"
            android:gravity="center" 
            android:visibility="gone"/>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/phototip_linear_parent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/medium_white_bg"
        android:layout_below="@+id/phototip_relative_headertip"
        android:orientation="vertical" >

<!--         <TextView -->
<!--             android:id="@+id/phototip_text_pleaserate" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_marginLeft="15dp" -->
<!--             android:layout_marginTop="15dp" -->
<!--             android:contentDescription="@string/imagecontent" -->
<!--             android:text="@string/phottotip" -->
<!--             android:textColor="@color/faqorange_color" -->
<!--             android:textSize="16dp" /> -->

        <TextView
            android:id="@+id/phototip_text_pleaserecipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/imagecontent"
            android:text="@string/phottotip1"
            android:textColor="@color/dark_grey_text"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/phototip_text_pleaseuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/imagecontent"
            android:text="@string/phottotip2"
            android:textColor="@color/dark_grey_text"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/phototip_text_pleasemake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/imagecontent"
            android:text="@string/phottotip3"
            android:textColor="@color/dark_grey_text"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="25dp"            
            android:contentDescription="@string/imagecontent" />

<!--         <ImageView -->
<!--             android:id="@+id/phototip_button_done" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_gravity="center_horizontal" -->
<!--             android:layout_marginLeft="0dp" -->
<!--             android:layout_marginRight="0dp" -->
<!--             android:layout_marginTop="20dp" -->
<!--             android:background="@drawable/done_btn" -->
<!--             android:contentDescription="@string/imagecontent" /> -->
    </LinearLayout>

</RelativeLayout>